order / order item fixed matching data types